# snowflake

./: Cargo.toml  README.md
examples/: benchmark.rs
src/: bucket.rs  error.rs  global.rs  layout.rs  lib.rs  utils.rs
src/generator/: components.rs  creation.rs  decomposition.rs  generation.rs  mod.rs  tests.rs
