[package]
name = "snowflake-gen"
version = "1.0.1"
edition = "2024"
authors = ["koalacodee <koalacodee@gmail.com>"]
description = "A configurable Snowflake ID generator with custom bit layouts, thread-local global generation, and ID decomposition"
license = "MIT"
repository = "https://github.com/koalacodee/snowflake"
keywords = ["snowflake", "id", "distributed", "generator", "unique"]
categories = ["algorithms", "data-structures"]
readme = "README.md"

[dependencies]
